# SAPEEDFESAcUNAM

./: .gitignore  CHANGELOG  CITATION.cff  Dockerfile  README.md  config.yaml  dashboard_unam_pro_safe.py  environment.yaml  export_figures.py  pyproject.toml  requirements.txt  translations.py
data/: .gitkeep  demo_prof_01.csv  demo_prof_02.csv  demo_prof_03.csv  demo_prof_04.csv
