[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sapeed"
version = "1.0.0"
description = "Sistema de Análisis Psicométrico y Estructural de Evaluación Docente"
readme = "readme.md"
license = { file = "LICENSE" }
authors = [
    { name = "UNAM Academic Research Unit", email = "research@unam.mx" }
]
maintainers = [
    { name = "SAPEED Technical Team" }
]
requires-python = ">=3.11"

keywords = [
    "evaluation",
    "psychometrics",
    "education",
    "ridge-regression",
    "streamlit",
    "analytics"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: Streamlit",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0"
]

[project.urls]
Homepage = "https://github.com/UNAM/sapeed"
Documentation = "https://github.com/UNAM/sapeed/wiki"
Repository = "https://github.com/UNAM/sapeed"
Issues = "https://github.com/UNAM/sapeed/issues"

############################################
# Optional Tooling Configuration
############################################

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]